<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:background="@color/background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center|top"
            android:text="@string/strTitleMain"
            android:textColor="@color/textWhite"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="@string/strBLEMain"
                android:textColor="@color/textWhite"
                android:textStyle="bold"/>

            <RadioGroup
                android:checkedButton="@+id/offer"
                android:id="@+id/toggle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="80dp"
                android:background="@drawable/pink_out_line"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:id="@+id/search"
                    android:background="@drawable/toggle_widget_background"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/strBLEMainOff"
                    android:textColor="@color/textWhite" />

                <RadioButton
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/offer"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/strBLEMainOn"
                    android:textColor="@color/textWhite" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="80dp"
            android:gravity="center">

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/btn_Set"
                android:background="@drawable/custom_button_red"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textColor="@color/textWhite"
                android:textStyle="bold"
                android:text="@string/strBTNMainFirmware"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>